# bitwarden-manager

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  app.py  bandit.yaml  buildspec.yml  handler.py  local_run.py  mypy.ini  pyproject.toml
bitwarden_manager/: associate_users_to_groups.py  aws_secretsmanager_client.py  bitwarden_manager.py  bitwarden_public_api.py  check_user_details.py  confirm_user.py  export_vault.py  get_user_details.py  groups_and_collections.py  offboard_user.py  onboard_user.py  redacting_formatter.py  reinvite_users.py  update_user_groups.py  user.py
bitwarden_manager/clients/: aws_secretsmanager_client.py  bitwarden_public_api.py  bitwarden_vault_client.py  dynamodb_client.py  s3_client.py  user_management_api.py
bitwarden_manager/handlers/: offboard_inactive_users.py
bitwarden_manager/temp/: external_id_updater.py  list_collection_items.py  list_custom_groups.py  role_updater.py  run.py  setup.py  update_collection_external_ids.py
docs/: bitwarden-ump.md  pre-commit.md
scripts/events-log-parser/: README.md  go.mod  main.go  main_test.go
scripts/events-log-parser/testdata/: bitwarden_org-events_export.csv
scripts/inactive_users/: main.py  pyproject.toml
src/: aws_secretsmanager_client.py  bitwarden_manager.py
test/: test_bitwarden_public_api.py
tests/: test_app.py  test_aws_secretsmanager_client.py  test_bitwarden_manager.py  test_bitwarden_public_api.py  test_confirm_user.py  test_export_vault.py  test_offboard_user.py  test_onboard_user.py  test_redacting_formatter.py
tests/bitwarden_manager/: conftest.py  test_associate_users_to_groups.py  test_bitwarden_manager.py  test_check_user_details.py  test_confirm_user.py  test_get_user_details.py  test_groups_and_collections.py  test_offboard_inactive_users.py  test_offboard_user.py  test_onboard_user.py  test_redacting_formatter.py  test_reinvite_users.py  test_update_user_groups.py
tests/bitwarden_manager/clients/: bitwarden_client_stub.py  bitwarden_client_stub_failing.py  bitwarden_client_stub_failing_operations.py  test_aws_secretsmanager_client.py  test_bitwarden_public_api.py  test_bitwarden_vault_client.py  test_bitwarden_vault_client_stub.py  test_dynamodb_client.py  test_s3_client.py  test_stub_bitwarden_vault_client.py  test_user_management_api.py
tests/bitwarden_manager/clients/stubs/: bitwarden_client_failing_authentication_stub.py  bitwarden_client_failing_operations_stub.py  bitwarden_client_incorrect_credentials_stub.py  bitwarden_client_stub.py
tests/bitwarden_manager/clients/temp/: test_external_id_updater.py
tests/bitwarden_manager/handlers/: test_offboard_inactive_users.py
tests/bitwarden_manager/resources/: get_members.json
tests/bitwarden_manager/temp/: data_export.json  test_external_id_updater.py  test_list_collection_items.py  test_list_custom_groups.py  test_role_updater.py  test_update_collection_external_ids.py
tests/bitwarden_manager/temp/stubs/: bitwarden_client_stub.py  bitwarden_client_stub_failing.py  list_collection_items.json  list_collections.json
