[tool.poetry]
name = "bitwarden-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bitwarden_manager"}]
license = "Apache-2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.14.0"
boto3-type-annotations = "^0.3.1"
requests = "^2.32.0"
types-requests = "^2.30.0.0"
awslambdaric = "^3.0.0"
boto3 = "^1.26.127"
boto3-stubs = "^1.26.131"
jsonschema = "^4.17.3"
types-jsonschema = "^4.17.0.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-print = "^5.0.0"
mypy = "^1.10"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
responses = "^0.25.0"
bandit = "^1.7.8"
pre-commit = "^3.7.0"
mock = "^5.1.0"
types-mock = "^5.1.0"
moto = "^5.0.18"
freezegun = "^1.5.0"
pip-audit = "^2.10.0"

[tool.black]

[tool.flake8]
ignore = ['E203'] # "Colons should not have any space before them" ignoring rule avoids incompatibaty with black formater https://github.com/psf/black/issues/315
max-line-length = 120

[tool.pytest]
minversion = "9.0"
addopts = ["-v", "-x", "-p", "no:cacheprovider", "--no-header", "--cov", "bitwarden_manager", "--cov-report", "term-missing", "--no-cov-on-fail", "--cov-fail-under", "100"]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
